--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 :root {
   --primary: #f2d090;
   --secondary: #fefaee;
+  --accent: #e14b2a;
 }
 
 * {
@@ -14,14 +15,19 @@
 body {
   background-color: var(--primary);
   padding: 60px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
   background-color: var(--secondary);
   width: 100%;
-  height: 1000px;
+  height: 700px;
   border-radius: 25px;
-  padding: 10px;
+  padding: 20px;
+  gap: 100px;
 }
 
 header {
@@ -48,13 +54,50 @@ nav button {
   background-color: var(--secondary);
   color: #000;
   border: none;
-  font-size: 20px;
+  font-size: 1.5rem;
   cursor: pointer;
+  border-radius: 15px;
+}
+
+nav button:focus {
+  background-color: var(--accent);
+  color: var(--secondary);
 }
 
 header h1 {
-  padding-left: 30px;
-  font-size: 40px;
+  padding-left: 32px;
+  font-size: 3rem;
   font-weight: bold;
   flex: 0.7;
+  text-decoration: underline;
+  color: var(--accent);
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 100px;
+  padding: 15px;
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
+.box1, .box2 {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  border: 5px solid var(--accent);
+  border-radius: 15px;
+  padding: 10px;
+}
+
+.box1 h3, .box2 h3 {
+  font-size: 1.7rem;
+  margin-bottom: 20px;
+}
+
+.box1 p, .box2 p {
+  font-size: 1.3rem;
+  line-height: 2rem;
 }
