--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ body {
   border-radius: 25px;
   padding: 20px;
   gap: 100px;
+  box-shadow: 0px 15px 15px 0px rgba(0,0,0,0.29);
 }
 
 header {
@@ -89,7 +90,7 @@ header h1 {
   overflow: auto;
   border: 5px solid var(--accent);
   border-radius: 15px;
-  padding: 10px;
+  padding: 15px;
 }
 
 .box1 h3, .box2 h3 {
