Finish module_main.js file which creates the page layout

--- a/src/style.css
+++ b/src/style.css
@@ -74,7 +74,7 @@ header h1 {
   color: var(--accent);
 }
 
-.content {
+main {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
